--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
+  "resolutions": { "@types/react": "~17.0.21" },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
